# muFFTTO

./: .gitignore  .output.txt  AUTHORS  README.md  pyproject.toml
examples/: analytical_solution_2D_elasticity_Hashin_composite_sphere.py  example_2D_elasticity_TO.py  example_2D_homogenization_conductivity_data_netCDF4_export.py  example_2D_homogenization_conductivity_ndFields.py  example_2D_homogenization_elasticity.py  example_2D_homogenization_elasticity_Hashin_composite_sphere.py  example_2D_homogenization_elasticity_test_npy_geometries.py  example_3D_homogenization_conductivity.py  example_3D_homogenization_elasticity.py  example_TO_indre.py  geometry_jacobi.mat  geometry_jacobi.npy  gradient.py  non-contiguous_example.py  unit_impuls_muFFT.py  unit_impuls_muGrid.py
experiments/: Eigenvalues_comparison_conductivity.py  Eigenvalues_comparison_conductivity_1D.py  Eigenvalues_comparison_conductivity_anisotropy.py  Eigenvalues_comparison_elasticity.py  FEM_quadratic.py  FEM_signleQuadraturePoint.py  FEM_solver_v1.py  IGA_1D_derivative.py  Ibrahim_stiffness_test.py  Iga_Guad_homo.py  System_matrix_analysis.py  __init__.py  deGeus_FFT_spectral_solver_comparison.py  delete.py  diffusion.py  difusion_FEM_a_la_Geuss.py  difusion_FEM_a_la_Geuss_3D.py  difusion_FEM_a_la_Geuss_3D_strain_based.py  difusion_FEM_a_la_Geuss_3D_strain_based_data_preconditioner.py  elasticity.py  elasticity_FEM_a_la_Geuss.py  elasticity_FEM_a_la_Geuss_2D_micrograph.py  elasticity_FEM_a_la_Geuss_3D.py  elasticity_FEM_a_la_Geuss_3D_elasto_plastic_case.py  elasticity_FEM_a_la_Geuss_3D_strain_based.py  (+66 more)
(+255 files in other folders)
