[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "muFFTTO"
description = "FFT-based micro-scale topology optimization on periodic unit cells"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" },
    { name = "Martin Ladecky", email = "martin.ladecky@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = [ "version" ]
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
mpi = [
    "mpi4py",
    "NuMPI"
]
test = [
    "pytest",
    "pytest-cov"
]

# Note: muGrid and muFFT must be installed separately from the muSpectre project:
# https://github.com/muSpectre/muGrid
# https://github.com/muSpectre/muFFT

[project.urls]
documentation = "https://imtek-simulation.github.io/muFFTTO/"
repository = "https://github.com/imtek-simulation/muFFTTO"
changelog = "https://github.com/imtek-simulation/muFFTTO/blob/master/CHANGELOG.md"
